--- a/style.css
+++ b/style.css
@@ -1,30 +1,45 @@
 html {
   font-family: "Lexend Deca", sans-serif;
-  box-sizing: border-box;
   margin: 0;
 }
-body {
+body,
+button {
   margin: 0;
-  /* display: flex;
-  justify-content: center;
-  align-content: center;
-  flex-direction: column; */
+  padding: 0;
+  box-sizing: border-box;
 }
 #container {
   border: 2rem solid whitesmoke;
-}
-#sedan-container,
-#suv-container,
-#luxury-container {
-  border: 2rem solid white;
   display: flex;
-  flex-direction: column;
+  padding: 20px;
+  align-items: center;
+  justify-content: center;
+  max-width: 1000px;
+  min-height: 90vh;
+  margin: auto;
+}
+#sedan-container {
+  padding: 25px;
+  border-radius: 10px 10px 0 0;
+  margin: 0;
+  color: white;
+}
+#suv-container {
+  color: white;
+  padding: 25px;
   margin: 0;
 }
-h2,
-h3,
-h4 {
-  text-align: center;
+#luxury-container {
+  padding: 25px;
+  border-radius: 10px 10px 0 0;
+  margin: 0;
+  color: white;
+}
+h2 {
+  font-family: "Big Shoulders Display", sans-serif;
+  text-transform: uppercase;
+  font-size: 26px;
+  margin: 20px;
 }
 #sedan-container {
   background-color: orange;
@@ -34,4 +49,45 @@ h4 {
 }
 #luxury-container {
   background-color: rgb(52, 108, 81);
+  border-radius: 0 10px 10px 0;
+}
+p {
+  font-size: 15px;
+  margin: 30px;
+  line-height: 1.5;
+}
+
+#container img {
+  margin-bottom: 20px;
+}
+
+.btn {
+  background-color: white;
+  border: 2px solid white;
+  border-radius: 30px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: transparent;
+  color: white;
+}
+#sedan-container button {
+  color: orange;
+}
+#suv-container button {
+  color: rgb(46, 148, 148);
+}
+#luxury-container button {
+  color: rgb(52, 108, 81);
+}
+#sedan-container {
+  border-radius: 10px 0 0 10px;
+}
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
